created photo generator

--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,9 @@
+/* age in days */
 .challenge-1{
     border: 1px solid black;
+    width: 75%;
+    margin: 0 auto;
+    text-align: center;
 }
 .flex-box-container-1{
     display: flex;
@@ -21,4 +25,25 @@
 .challenge1a{
     background-color: red;
     color: white;
+}
+/* cat generator */
+.challenge-2{
+    border: 1px solid black;
+    width: 75%;
+    margin: 0 auto;
+    text-align: center;
+}
+.challenge2{
+    background-color: rgb(91, 197, 91);
+    color: white;
+}
+.flex-box-container-2{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    padding: 10px;
+
+}
+.flex-box-container-2 img{
+padding: 10px;
 }
