--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
     margin: 0 auto;
     text-align: center;
 }
-.flex-box-container-1, .flex-box-container-2{
+.flex-box-container-1, .flex-box-container-2, .flex-box-container-3{
     display: flex;
     border: 1px solid black;
     padding: 10px;
@@ -35,4 +35,8 @@
 .flex-box-container-2 img{
 margin: 10px;
 box-shadow: 0px 10px 50px rgba(0,0,0,0.7);
+}
+
+.flex-box-container-3 img:hover{
+    box-shadow: 0px 10px 50px rgba(0,0,0,0.7);
 }
